@@ -59,6 +59,8 @@ import org.apache.kylin.job.execution.ExecutableManager;
 import org.apache.kylin.job.execution.ExecutableState;
 import org.apache.kylin.job.execution.ExecuteResult;
 import org.apache.kylin.job.execution.Output;
+import org.apache.kylin.metadata.model.IEngineAware;
+import org.apache.kylin.job.impl.threadpool.IJobRunner;
 import org.apache.kylin.metadata.model.Segments;
 import org.apache.kylin.metadata.project.ProjectInstance;
 import org.apache.kylin.metadata.project.ProjectManager;
@@ -75,6 +77,8 @@ public class SparkExecutable extends AbstractExecutable {
     private static final String JOB_ID = "jobId";
     private static final String COUNTER_SAVE_AS = "CounterSaveAs";
     private static final String CONFIG_NAME = "configName";
+
+    private static final String EXECUTOR_JVM_ARG = "spark.executor.extraJavaOptions";
 
     public void setClassName(String className) {
         this.setParam(CLASS_NAME, className);
@@ -199,14 +203,14 @@ public class SparkExecutable extends AbstractExecutable {
 
     @SuppressWarnings("checkstyle:methodlength")
     @Override
-    protected ExecuteResult doWork(ExecutableContext context) throws ExecuteException {
+    protected ExecuteResult doWork(ExecutableContext context, IJobRunner jobRunner) throws ExecuteException {
         ExecutableManager mgr = getManager();
         Map<String, String> extra = mgr.getOutput(getId()).getExtra();
         String sparkJobId = extra.get(ExecutableConstants.SPARK_JOB_ID);
         if (!StringUtils.isEmpty(sparkJobId)) {
             return onResumed(sparkJobId, mgr);
         } else {
-            String cubeName = this.getParam(SparkCubingByLayer.OPTION_CUBE_NAME.getOpt());
+            String cubeName = this.getParam(BatchConstants.ARG_CUBE_NAME);
             CubeInstance cube;
             if (cubeName != null) {
                 cube = CubeManager.getInstance(context.getConfig()).getCube(cubeName);
@@ -218,7 +222,7 @@ public class SparkExecutable extends AbstractExecutable {
                 config = cube.getConfig();
             } else {
                 // when loading hive table, we can't get cube name/config, so we get config from project.
-                String projectName = this.getParam(SparkColumnCardinality.OPTION_PRJ.getOpt());
+                String projectName = this.getParam(BatchConstants.ARG_PROJECT);
                 ProjectInstance projectInst = ProjectManager.getInstance(context.getConfig()).getProject(projectName);
                 config = projectInst.getConfig();
             }
@@ -249,7 +253,7 @@ public class SparkExecutable extends AbstractExecutable {
 
             if (cube != null && !isCreateFlatTable()) {
                 setAlgorithmLayer();
-                String segmentID = this.getParam(SparkCubingByLayer.OPTION_SEGMENT_ID.getOpt());
+                String segmentID = this.getParam(BatchConstants.ARG_SEGMENT_ID);
                 CubeSegment segment = cube.getSegmentById(segmentID);
                 Segments<CubeSegment> mergingSeg = cube.getMergingSegments(segment);
                 dumpMetadata(segment, mergingSeg);
@@ -288,8 +292,15 @@ public class SparkExecutable extends AbstractExecutable {
             }
 
             for (Map.Entry<String, String> entry : sparkConfs.entrySet()) {
-                stringBuilder.append(" --conf ").append(entry.getKey()).append("=").append(entry.getValue())
-                        .append(" ");
+                //"spark.executor.extraJavaOptions=-XX:+PrintGCDetails -XX:+PrintGCTimeStamps" need surround with "".
+                if (entry.getKey().equals(EXECUTOR_JVM_ARG)) {
+                    stringBuilder.append(" --conf ").append("\"").append(entry.getKey()).append("=")
+                            .append(entry.getValue()).append("\"").append(" ");
+                    logger.info("use spark.executor.extraJavaOptions: " + stringBuilder.toString());
+                } else {
+                    stringBuilder.append(" --conf ").append(entry.getKey()).append("=").append(entry.getValue())
+                            .append(" ");
+                }
             }
 
             stringBuilder.append("--jars %s %s %s");
@@ -298,7 +309,7 @@ public class SparkExecutable extends AbstractExecutable {
             logger.info("cmd: " + cmd);
             final ExecutorService executorService = Executors.newSingleThreadExecutor();
             final CliCommandExecutor exec = new CliCommandExecutor();
-            final PatternedLogger patternedLogger = new PatternedLogger(logger, new PatternedLogger.ILogListener() {
+            final PatternedLogger patternedLogger = new PatternedLogger(logger, IEngineAware.ID_SPARK, new PatternedLogger.ILogListener() {
                 @Override
                 public void onLogEvent(String infoKey, Map<String, String> info) {
                     // only care three properties here
@@ -511,7 +522,7 @@ public class SparkExecutable extends AbstractExecutable {
         CubeDescTiretreeGlobalDomainDictUtil.cuboidJob(segment.getCubeDesc(), dumpList);
 
         JobRelatedMetaUtil.dumpAndUploadKylinPropsAndMetadata(dumpList, (KylinConfigExt) segment.getConfig(),
-                this.getParam(SparkCubingByLayer.OPTION_META_URL.getOpt()));
+                this.getParam(BatchConstants.ARG_META_URL));
     }
 
     private void attachSegmentsMetadataWithDict(List<CubeSegment> segments) throws IOException {
@@ -528,7 +539,7 @@ public class SparkExecutable extends AbstractExecutable {
             CubeDescTiretreeGlobalDomainDictUtil.cuboidJob(segment.getCubeDesc(), dumpList);
         }
         JobRelatedMetaUtil.dumpAndUploadKylinPropsAndMetadata(dumpList, (KylinConfigExt) segments.get(0).getConfig(),
-                this.getParam(SparkCubingByLayer.OPTION_META_URL.getOpt()));
+                this.getParam(BatchConstants.ARG_META_URL));
     }
 
     protected void readCounters(final Map<String, String> info) {
